PyMaker/datas/object2/RawHTML/i18501/Python_DOC_referPages.indentationerror-on-very-basic-line-of-code-in-python-2-7-1.txt
<div class="post-text" itemprop="text">
<pre><code>&gt;&gt;&gt; if temp &gt; 60 &lt; 75:
    print 'just right'
else:
</code></pre>
<p>File "", line 3
    else:
        ^
This is the error that comes up ---&gt; IndentationError: unindent does not match any outer indentation level</p>
<p>as soon as I press enter it comes up with that and I'm not sure how to fix it, sorry I know this is probably a very silly question but I have only just started, hence the very basic code and error.</p>
</div>
<div class="post-text" itemprop="text">
<p>For a start, you should use:</p>
<pre><code>if temp &gt; 60 and temp &lt; 75:
</code></pre>
<p>or:</p>
<pre><code>if 60 &lt; temp &lt; 75:
</code></pre>
<p>Once you've fixed that, make sure you're following the Python guidelines for indenting. That indentation error can often occur when you don't (such as mixing tabs/spaces, using too few or too many spaces and so on).</p>
<p>From what you've posted, the indentation looks okay but it's sometimes hard to tell. The following Python 2.7.3 session, using four spaces for the indents, works fine:</p>
<pre><code>&gt;&gt;&gt; temp = 62
&gt;&gt;&gt; if temp &gt; 60 &lt; 75:
...     print "okay"
... else:
...     print "urk"
... 
okay
</code></pre>
<p>But when I (foolishly) put a space immediately before the <code>else:</code>, I see, similar to you:</p>
<pre><code>&gt;&gt;&gt; temp = 62
&gt;&gt;&gt; if temp &gt; 60 and temp &lt; 75:
...     print "okay"
...  else:
  File "&lt;stdin&gt;", line 3
    else:
        ^
IndentationError: unindent does not match any outer indentation level
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>you need to mach youre indentation:</p>
<pre><code>if temp &gt; 60 &lt; 75:
    print 'just right'
else:
</code></pre>
<p>the if is a condition and the next lines (that are done if the if statement is True)should be indenteted then the <code>else:</code> should be lined up with the if statement</p>
</div>
<div class="post-text" itemprop="text">
<p>First of all, your if statement needs to be fixed and you need to indent your lines like so:</p>
<pre><code>if temp &gt; 60 and temp &lt; 75:
    print 'just right'
else:
    pass # whatever you need to do here
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Python uses colons (:) and indentation to group statements, whereas other languages use curly braces ({}) or parentheses. Therefore you need to indent the blocks of Python statements within if/else statements and for, while, and foreach statements. So your code should be:</p>
<pre><code>if 60 &lt; temp &lt; 75:
    print 'just right'
else:
    pass # this doesn't execute anything; it's a placeholder
</code></pre>
<p>Note that Python lets you <a href="http://docs.python.org/3/reference/expressions.html#comparisons" rel="nofollow">chain inequalities</a> (e.g. <code>60 &lt; x &lt; 75</code> instead of <code>x &gt; 60 and x &lt; 75</code>), though many other languages do not.</p>
</div>
<span class="comment-copy">To clarify why everyone is telling you to fix you're <code>if</code> statement but python doesn't complain, <code>if x &gt; 60 &lt; 75</code> will be equivalent to <code>if x &gt; 60 and 60 &lt; 75</code>. Google operator chaining in python for more info.</span>
<span class="comment-copy">Ok thanks, for some reason the code wasn't working in python IDLE but in the command line it worked fine, I'm not sure why it happened but it's fixed now, thanks for your help.</span>
